# Duckpond

./: .gitignore  ALPHA.md  CLAUDE.md  DESIGN.md  FEATURES.md  NOTES.md  PLAN-SDK-INTEGRATION.md  PLAN-accurate-context-meter.md  TAILWIND_MIGRATION.md  duckpond  duckpond-dev  pyproject.toml  test-streaming.py
agents/: librarian.md  memno.md
backend/: package-lock.json  package.json
backend-py/: README.md  pyproject.toml
backend-py/src/duckpond/: __init__.py  archive.py  client.py  main.py  prompt.py
backend-py/src/duckpond/memories/: __init__.py  recall.py  suggest.py
backend-py/src/duckpond/routes/: __init__.py  chat.py  context.py  sessions.py  stream.py
backend-py/src/duckpond/tools/: __init__.py  cortex.py
backend-py/templates/: system_prompt.jinja2
backend/src/: config.ts  index.ts  instrumentation.ts  redis.ts
backend/src/hooks/: context-tag.ts  session-start.ts  subvox.ts
backend/src/parsing/: jsonl.ts
backend/src/routes/: chat.ts  context.ts  sessions.ts
backend/src/utils/: time.ts
docs/: sdk-compact-prompt.md
docs/Icon.icon/: icon.json
docs/icon_vFINAL.icon/: icon.json
docs/icon_vMILLION.icon/: icon.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  store.ts  theme.ts
frontend/src/components/: Attachment.tsx  ContextMeter.tsx  MarkdownText.tsx  ToolFallback.tsx
frontend/src/pages/: ChatPage.tsx  HomePage.tsx
frontend/src/themes/: current.css  ember.css  oak.css  slate.css
src/duckpond/: __init__.py  cli.py  config.py  server.py
src/duckpond/hooks/: __init__.py  context_tag.py  session_start.py  subvox.py
src/duckpond/parsing/: __init__.py  jsonl.py
src/duckpond/routes/: __init__.py  chat.py  context.py  sessions.py
src/moose/: __init__.py  cli.py  server.py
