[project]
name = "moose"
version = "0.1.0"
description = "MAlpha Out Of Claude Code SoonEst - Alpha's sovereign chat client"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "claude-agent-sdk",
    "assistant-stream",
    "langfuse",
    "langsmith[claude-agent-sdk]",
    "langsmith[otel]",
]

[project.scripts]
moose = "moose.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moose"]
