[project]
name = "duckpond"
version = "0.1.0"
description = "The duck, the pond, and a cozy bench by the water where we sit and talk shit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "claude-agent-sdk",
    "assistant-stream",
    "langfuse",
    "langsmith[claude-agent-sdk]",
    "langsmith[otel]",
]

[project.scripts]
duckpond = "duckpond.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckpond"]
