[project]
name = "duckpond-backend"
version = "0.1.0"
description = "Duckpond backend - Alpha's home in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "alpha-sdk",
    "assistant-stream>=0.0.31",
    "redis>=5.0.0",
    "pendulum>=3.0.0",
    "psycopg[binary]>=3.0.0",
    "jinja2>=3.0.0",
    "logfire[fastapi]>=3.0.0",  # Observability - wraps OTel with nicer API
    "orjson>=3.11.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckpond"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.uv.sources]
# Local editable for dev. For deployment: swap to git+tag
# alpha-sdk = { git = "https://github.com/Pondsiders/alpha_sdk.git", tag = "v0.5.0" }
alpha-sdk = { path = "../../../Basement/alpha_sdk", editable = true }
